# cat

./: README.md
base-model/: .gitignore  README.rst  pyproject.toml  run.txt
base-model/pointnet2_ops_lib/: pyproject.toml
base-model/tests/: test_thesis.py
base-model/thesis/: main.py
base-model/thesis/cfgs/: config.yaml
base-model/thesis/datasets/: data_modules.py  download_datasets.sh  modelnet.py  modelnet_dgcnn.py  scannet.py  shapenet_core.py
base-model/thesis/datasets/splits/modelnet/: modelnet10_test.txt  modelnet10_train.txt  modelnet40_val.txt
base-model/thesis/datasets/splits/modelnet_original/: modelnet10_train.txt  modelnet10_val.txt  modelnet40_train.txt
base-model/thesis/datasets/splits/scannet/: scannetv2_overfit.txt
base-model/thesis/modules/: classification_module.py  dgcnn.py  dgcnn_old.py  dgcnn_online.py  segmentation_module.py
base-model/thesis/modules/transformer/: attention.py  convolution.py  decoder.py  encoder.py  misc.py  positional_encoder.py  transformer.py  transformer_classification.py  transformer_online.py
base-model/thesis/training/: train.py
base-model/thesis/utils/: config.py  logger.py  utils.py
classification-pct-pt/: .gitignore  Plot Objects.ipynb  README.md  convolution.py  convolution_.py  train_cls.py  train_partseg.py  wandb_utils.py
classification-pct-pt/.ipynb_checkpoints/: Plot Objects-checkpoint.ipynb
classification-pct-pt/config/: cls.yaml  partseg.yaml
scene-segmentation-pt/: .gitignore  Plot Scenes.ipynb  env_setup.sh
scene-segmentation-pt/results/: s3dis_pt_wo_conv.out
(+42 files in other folders)
